test/error/iocheck/err8.rzy
// Error: transition guard is not allowed to write state

Err8 = Component
  event : slot();
  
hfsm(A)
  a : R{0,100} = 0;
  
  foo = function():Boolean
    a := 42;
    return a > 10;
  end
  
  A : state;
  B : state;
  
  A to B by event() if foo();
end

